--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,7 @@ nav:
       - Visão Geral do Produto: "visão do produto.md"
       - Visão Geral do Projeto: "visão do projeto.md"
       - Processo de desenvolvimento de software: "processo.md"
+      - Lições aprendidas: "licoes.md"
 
 theme: 
   name: material
