--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@ site_name: Emaflix
 site_url: "https://example.com/"
 nav:
   - Home: index.md
-  - Documentação: 
+  - Visão do software:
       - Visão Geral do Produto: "visão do produto.md"
       - Visão Geral do Projeto: "visão do projeto.md"
       - Processo de desenvolvimento de software: "processo.md"
