add arquitetura and some lessons

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,7 +9,9 @@ nav:
       - Lições aprendidas: "licoes.md"
   - Backlog do produto:
     - Backlog do produto: "backlog_produto.md"
+  - Arquitetura: "arquitetura.md"
   - Padrões de Software: "padroesdesoftware.md"
+  - Lições aprendidas : "padroesdesoftware.md"
   - Referências bibliográficas: "referencias.md"
 
 theme: 
