--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,7 @@ nav:
   - Backlog do produto:
     - Backlog do produto: "backlog_produto.md"
   - Padrões de Software: "padroesdesoftware.md"
+  - Sprints: "sprints.md"
   - Lições aprendidas : "licoesaprendidas.md"
   - Referências bibliográficas: "referencias.md"
 
