--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,11 +2,10 @@ site_name: Emaflix
 site_url: "https://example.com/"
 nav:
   - Home: index.md
-  - Visão do software:
+  - Visão do Produto:
       - Visão Geral do Produto: "visão do produto.md"
       - Visão Geral do Projeto: "visão do projeto.md"
       - Processo de desenvolvimento de software: "processo.md"
-      - Lições aprendidas: "licoes.md"
   - Backlog do produto:
     - Backlog do produto: "backlog_produto.md"
   - Padrões de Software: "padroesdesoftware.md"
