again trying to remove references to node continuos integration.yml

--- a/.github/workflows/continuos integration.yml
+++ b/.github/workflows/continuos integration.yml
@@ -8,7 +8,11 @@ jobs:
   continuos-integration:
     runs-on: ubuntu-latest
 
+    
     steps:
+      - name: Clone repository
+      - uses: actions/checkout@v2
+     
       - name: run install dependecies frontend and run
         run: |
           cd Emaflix
