--- a/Emaflix/Backend/pom.xml
+++ b/Emaflix/Backend/pom.xml
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>3.1.0</version> <!-- Use the latest version of Spring Boot -->
+            <version>3.1.0</version>
             <scope>compile</scope>
             <exclusions>
                 <exclusion>
@@ -43,6 +43,11 @@
                     <artifactId>spring-boot-starter-tomcat</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.26</version>
         </dependency>
     </dependencies>
 
