--- a/Emaflix/Backend/pom.xml
+++ b/Emaflix/Backend/pom.xml
@@ -50,6 +50,12 @@
             <version>1.18.26</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <repositories>
