--- a/Emaflix/Frontend/package.json
+++ b/Emaflix/Frontend/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.18.0",
-    "shaka-player-react": "^1.1.5"
+    "shaka-player-react": "^1.1.5",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
