--- a/Emaflix/Frontend/package.json
+++ b/Emaflix/Frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.8.0",
     "react-bootstrap": "^2.9.1",
