--- a/Emaflix/Frontend/package.json
+++ b/Emaflix/Frontend/package.json
@@ -28,6 +28,10 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "jest": "^29.7.0",
     "vite": "^4.4.5"
-  }
+  },
+  "scripts": {
+    "test": "jest"
+}
 }
