--- a/Emaflix/Frontend/package.json
+++ b/Emaflix/Frontend/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "test": "jest",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -30,8 +31,5 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "jest": "^29.7.0",
     "vite": "^4.4.5"
-  },
-  "scripts": {
-    "test": "jest"
-}
+  }
 }
