--- a/.github/workflows/ciFrontend.yml
+++ b/.github/workflows/ciFrontend.yml
@@ -1,20 +1,22 @@
-name: Continuos Integration
+name: Continuous Integration
 
 on:
   push:
   pull_request:
 
 jobs:
-  continuos-integration:
+  continuous-integration:
     runs-on: ubuntu-latest
-
     
     steps:
       - uses: actions/checkout@v2
- 
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '21'
 
-     
-      - name: run install dependecies frontend and run
+      - name: Run install dependencies and start frontend
         run: |
           cd Emaflix/Frontend
           npm install
