--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,6 +13,7 @@ nav:
   - Padrões de Software: "padroesdesoftware.md"
   - Entregas: "entregas.md"
   - Sprints: "sprints.md"
+  - Teste: "teste.md"
   - Referências bibliográficas: "referencias.md"
 
 theme: 
